# harp

./: Cargo.toml  README.md  project.toml
src/: lib.rs  main.rs
src/evaluator/: mod.rs
src/gui/: mod.rs
src/gui/config/: mod.rs
src/gui/new_project/: mod.rs
src/nodes/: mod.rs
src/nodes/environment/: mod.rs
src/nodes/functions/: mod.rs
src/nodes/intrinsic/: mod.rs
src/project/: mod.rs
src/project/buffer/: mod.rs
src/project/editor/: mod.rs
src/project/explorer/: mod.rs
src/project/function_editor/: mod.rs
src/reader/: grammar.pest  mod.rs
tests/: environment.rs  evaluation.rs  functions.rs  reader.rs
